fixed issue with the dropdown overflow in SearchUser

--- a/Frontend/src/features/users/SearchUser/SearchUser.module.css
+++ b/Frontend/src/features/users/SearchUser/SearchUser.module.css
@@ -16,6 +16,7 @@
   width: 100%;
   color: #212529;
   overflow: hidden;
+  max-height: 200px;
 }
 
 .searchUserDropdown:hover {
